{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 85,
  "lineage": "1ce69511-f0ef-0c7b-123c-fa1a08d35ce5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:internet-gateway/igw-01c67546e3c302784",
            "id": "igw-01c67546e3c302784",
            "owner_id": "508012525739",
            "region": "us-east-1",
            "tags": {
              "Name": "jarvis-igw"
            },
            "tags_all": {
              "Name": "jarvis-igw"
            },
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:route-table/rtb-0d50a3a09737354c2",
            "id": "rtb-0d50a3a09737354c2",
            "owner_id": "508012525739",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c67546e3c302784",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "rtb-0d50a3a09737354c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ae802455dbd55e7",
            "region": "us-east-1",
            "route_table_id": "rtb-0d50a3a09737354c2",
            "subnet_id": "subnet-070c4e0af2d70dc80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:security-group/sg-09550f3e3ac6c8155",
            "description": "Permite trafego de saida para as Lambdas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09550f3e3ac6c8155",
            "ingress": [],
            "name": "jarvis-lambda-sg-v2",
            "name_prefix": "",
            "owner_id": "508012525739",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "sg-09550f3e3ac6c8155",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:security-group/sg-0fc2f4cf88af6ec69",
            "description": "Permite acesso apenas das Lambdas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc2f4cf88af6ec69",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "jarvis-rds-sg",
            "name_prefix": "",
            "owner_id": "508012525739",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "sg-0fc2f4cf88af6ec69",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:subnet/subnet-0693a8835e5c46571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0693a8835e5c46571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508012525739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jarvis-private-db"
            },
            "tags_all": {
              "Name": "jarvis-private-db"
            },
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "subnet-0693a8835e5c46571",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:subnet/subnet-0838c18da9b17c2d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838c18da9b17c2d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508012525739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jarvis-private-db-2"
            },
            "tags_all": {
              "Name": "jarvis-private-db-2"
            },
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "subnet-0838c18da9b17c2d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:subnet/subnet-070c4e0af2d70dc80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070c4e0af2d70dc80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508012525739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jarvis-public-lambda"
            },
            "tags_all": {
              "Name": "jarvis-public-lambda"
            },
            "vpc_id": "vpc-0f43147f2f69aad12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "subnet-070c4e0af2d70dc80",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jarvis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jarvis_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508012525739:vpc/vpc-0f43147f2f69aad12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e57a86bc0ab9bb4",
            "default_route_table_id": "rtb-08f024a5ced097144",
            "default_security_group_id": "sg-00db5ef3206ffdc3f",
            "dhcp_options_id": "dopt-073d376661223c359",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f43147f2f69aad12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f024a5ced097144",
            "owner_id": "508012525739",
            "region": "us-east-1",
            "tags": {
              "Name": "jarvis-vpc"
            },
            "tags_all": {
              "Name": "jarvis-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508012525739",
            "id": "vpc-0f43147f2f69aad12",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}